# htmx-git

./: .air.toml  .gitignore  .prettierrc  Cargo.toml  README.md  go.mod  go.sum  package.json  pnpm-lock.yaml  tailwind.config.cjs
assets/: main.css
cmd/api/: main.go
internal/server/: commit.go  routes.go  templates.go
src/: git.rs  main.rs
templates/: base.html  base.tmpl.html  branch_list.html  file.tmpl.html  filelist.tmpl.html  hello.html  index.html  index.tmpl.html  log.html  log_list.html  remote_branch_list.html  remote_list.html  view_commit.html  view_commit_file.html  view_commit_file_list.html  view_commit_file_list_partial.html
tests/: handler_test.go
